--- a/.github/workflows/github_pylint_demo.yml
+++ b/.github/workflows/github_pylint_demo.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - names: Set up python
+      - name: Set up python
         uses: actions/setup-python@v2
         with:
           python-version: '3.10'
