--- a/.github/workflows/github_pylint_demo.yml
+++ b/.github/workflows/github_pylint_demo.yml
@@ -22,6 +22,7 @@ jobs:
         run: |
           source venv/bin/activate
           python -m pip install --upgrade pip
+          pip install pylint
           deactivate
         working-directory: ${{ github.workspace }}
 
