--- a/.github/workflows/github_pylint_demo.yml
+++ b/.github/workflows/github_pylint_demo.yml
@@ -23,6 +23,7 @@ jobs:
           source venv/bin/activate
           python -m pip install --upgrade pip
           pip install pylint
+          pip install numpy
           deactivate
         working-directory: ${{ github.workspace }}
 
