--- a/.github/workflows/github_pylint_demo.yml
+++ b/.github/workflows/github_pylint_demo.yml
@@ -30,6 +30,6 @@ jobs:
       - name: Analyze code with Pylint
         run: |
           source venv/bin/activate
-          pylint $(git ls-files '*.py')
+          pylint --fail-under 8 $(git ls-files '*.py')
           deactivate
         working-directory: ${{ github.workspace }}
